# rdy2cpl

./: .gitignore  .gitmodules  LICENSE  MANIFEST.in  Makefile  README.md  cli.py  conda_environment.yml  condaenv.yml  environment-dev.yml  environment-plot.yml  environment.yml  pyproject.toml  setup.py  slurm-job.sh
examples/: ece-namcouple.yaml  namcouple-example.yaml  ti-namcouple.yml  usage-ece-from-yaml.ipynb  usage-yaml.ipynb  usage.ipynb
prpoas/: __init__.py  leader.py  worker.py
prpoas/grids/: assign.py  couple.py
prpoas/grids/base/: orca.py  reduced_gaussian.py  simple.py  utils.py
prpoas/grids/base/tco/: __init__.py  tco159.py  tco95.py
rdy2cpl/: cli.py  grib.py  leader.py  loader.py  namcouple.py  namcouple_spec.py  scriptengine_task.py  worker.py
rdy2cpl/grids/: assign.py  couple.py  couple_grid.py  mask_modifiers.py
rdy2cpl/grids/base/: orca.py  pism.py  reduced_gaussian.py  regular.py  regular_gaussian.py
rdy2cpl/grids/base/ifs/: F128.py  N128.py  N160.py  N200.py  N256.py  N32.py  N80.py  O1280.py  O160.py  O200.py  O320.py  O400.py  O96.py  __init__.py
rdy2cpl/grids/base/nemo/: orca.py
rdy2cpl/grids/base/tco/: __init__.py  tco1279.py  tco159.py  tco199.py  tco319.py  tco399.py  tco95.py
rdy2cpl/grids/base/tl/: __init__.py  tl159.py  tl255.py  tl511.py  tl63.py
rdy2cpl/grids/model_specs/: ecearth.yml
rdy2cpl/model_spec/: ecearth.py
rdy2cpl/namcouple/: factory.py  types.py
utils/: ti.py
