[build-system]
    requires = ["setuptools>=59.7", "wheel"]
    build-backend = "setuptools.build_meta"

[project]
    name = "rdy2cpl"
    version = "0.1.0"
    authors = [
        { name = "Uwe Fladrich", email = "uwe.fladrich@protonmail.com" },
    ]
    description = "Ready2couple (rdy2cpl), ..."
    readme = "README.md"
    classifiers = [
        "Programming Language :: Python :: 3",
        "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
        "Operating System :: OS Independent",
    ]
    requires-python = ">=3.7"
    dependencies = [
        "pyyaml",
        "jinja2",
        "mpi4py",
        "numpy",
        "netcdf4",
        "eccodes",
    ]

    [project.urls]
        "Homepage" = "https://github.com/uwefladrich/rdy2cpl"
        "Bug Tracker" = "https://github.com/uwefladrich/rdy2cpl/issues"

    [project.scripts]
        r2c = "rdy2cpl.cli:main_cli"

    [project.entry-points."scriptengine.tasks"]
        "rdy2cpl.make_all" = "rdy2cpl.scriptengine_task:MakeAll"
